# aufw_glloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  module.cmake  setup.py
glad/: parse.py  spec.py  util.py
glloader/: __init__.py  __main__.py  opener.py  parse.py  spec.py  util.py
glloader/lang/: __init__.py
glloader/lang/c/: __init__.py  debug.py  generator.py
glloader/lang/c/loader/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glloader/lang/common/: generator.py
glloader/lang/d/: generator.py
